apps/external/truenas/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: truenas2
  namespace: truenas
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - "truenas2.vanillax.me"
  rules:
    - backendRefs:
        - name: truenas2
          port: 443
